--- a/react/helloWorld/my-app/src/index.css
+++ b/react/helloWorld/my-app/src/index.css
@@ -48,4 +48,19 @@ body {
   .game-info {
     margin-left: 20px;
   }
+
+  .winner {
+    background: rgb(7, 224, 61);
+    border: 1px solid rgb(214, 19, 19);
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+  }
   
