--- a/react/dataRevert/revert-data/src/index.css
+++ b/react/dataRevert/revert-data/src/index.css
@@ -54,4 +54,14 @@ code {
   color: cadetblue;
 }
 
+.resultViewMui{
+  color: rgb(0, 83, 156);
+}
+
+.revertMuiContent {
+  border-color: rgb(0, 83, 156);
+  border-style:solid;
+  border-width:5px;
+}
+
 
